# fiona-photonic

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  readme.md
!models/: test_device.xml
!models/lumerical/: mrr_coupling_vs_gap.lsf  mrr_sweep_coupling.lsf  mrr_sweep_temperature.lsf
bridge/: register.h
bridge/spike/: engine.h
bridge/verilator/: engine.cc  engine.h  puc_adapter.sv
pyfunc/: ideal_numerical.py  test.py
pyfunc/utils/: lut.py  parser.py  profiler.py
test/spike/: main.cpp
test/verilator/: main.cpp  top.sv
